iglog/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iglog
spec:
  type: ClusterIP
  selector:
    app: iglog
  ports:
    - port: 8080
